# Oratio

./: .gitignore  README.md  SETUP.md  TASKS.md  docker-compose.yml  sonic_exaple.py
.github/scripts/: create-ecr-repo.sh
.github/workflows/: deploy-infrastructure.yml
.kiro/specs/oratio-platform/: FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  REVIEW_CHECKLIST.md  agentcreator-architecture-fix.md  agentcreator-deployment-corrected.md  agentcreator-deployment-guide-corrected.md  agentcreator-docker-otel-guide.md  design.md  requirements.md  task3-implementation-complete.md  task3-summary.md  tasks.md  voice-personality-enhancement.md
.kiro/steering/: aws-cdk-python.md  aws-implementation.md  frontend-design-system.md  frontend-nextjs-shadcn.md  github-actions-cicd.md  meta-agent-architecture.md  product.md  structure.md  tech.md
agent-creator/: ARCHITECTURE.md  Dockerfile  Dockerfile.chameleon  MEMORY_ARCHITECTURE.md  OBSERVABILITY.md  README.md  VOICE_PERSONALITY_PARSER.md  pyproject.toml
agent-creator/agentcreator/: agent_runtime.py  mcp_tools.py  modules.py  pipeline.py  tools.py
agent-creator/agentcreator/signatures/: __init__.py  code_generator.py  code_reviewer.py  plan_drafter.py  plan_reviewer.py  prompt_generator.py  sop_parser.py  types.py  voice_personality_parser.py
agent-creator/chameleon/: .dockerignore  README.md  generic_loader.py  pyproject.toml
agent-creator/scripts/: test_pipeline.py
backend/: .env.example  Dockerfile.dev  README.md  config.py  dependencies.py  main.py  pyproject.toml  requirements.txt
backend/aws/: __init__.py  bedrock_client.py  cognito_client.py  dynamodb_client.py  s3_client.py  stepfunctions_client.py
backend/models/: __init__.py  agent.py  api_key.py  knowledge_base.py  user.py
backend/routers/: __init__.py  agents.py  api_keys.py  auth.py  chat.py  knowledge_bases.py  voice.py  voice_simple.py
backend/services/: __init__.py  agent_invocation_service.py  agent_service.py  api_key_service.py  auth_service.py  conversation_logger_service.py  knowledge_base_service.py  s3_service.py
backend/utils/: jwt_utils.py
demo_use_case/: product_specs.md  return_policy.md  troubleshooting.md
docs/: AGENT_CREATOR.md  AUTHENTICATION_IMPLEMENTATION.md  DEPENDENCY_INJECTION.md  MIDDLEWARE_AND_PROTECTION.md  ORATIO_ARCHITECTURE.md  VOICE_AGENTS.md
frontend/: .eslintrc.json  Dockerfile.dev  Dockerfile.prod  README.md  SHADCN_SETUP.md  components.json  docker-entrypoint.sh  global.d.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx
frontend/app/dashboard/agents/: page.tsx
frontend/app/dashboard/agents/[agent_id]/: page.tsx
frontend/app/dashboard/agents/create/: page.tsx
frontend/app/dashboard/api-keys/: page.tsx
frontend/app/dashboard/knowledge-base/: page.tsx
frontend/app/dashboard/knowledge-base/[knowledgeBaseId]/: page.tsx
frontend/app/dashboard/knowledge-base/create/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: animated-waves.tsx  cta-section.tsx  dashboard-layout.tsx  features-section.tsx  file-upload.tsx  footer.tsx  header.tsx  hero-section.tsx
frontend/components/agent-testing/: AgentConfigCard.tsx  AgentDetailsCard.tsx  AgentInfoCard.tsx  ApiDocumentation.tsx  CodeBlock.tsx  TextTestingInterface.tsx  VoicePersonalityCard.tsx  VoiceTestingInterface.tsx  chat-test.tsx  index.ts  voice-test.tsx
frontend/components/auth/: protected-route.tsx
frontend/components/kokonutui/: ai-voice.tsx  liquid-glass-card.tsx  matrix-text.tsx
frontend/components/ui/: mic-sparkles-icon.tsx  sidebar.tsx  tree.tsx
frontend/lib/api/: agents.ts  api-keys.ts  auth.ts  chat.ts  client.ts  config-test.ts  config.ts  knowledge-bases.ts  runtime-config.ts  voice.ts
frontend/lib/auth/: auth-context.tsx  token-storage.ts
frontend/lib/schemas/: agent.ts
frontend/public/: config.js
frontend/public/design/: dashboard.html  landing.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
infrastructure/: .gitignore  README.md  app.py  cdk.json  pyproject.toml
infrastructure/cdk_constructs/: auth.py  cdn_api.py  compute.py  database.py  ecs_api.py  ecs_frontend.py  iam_roles.py  storage.py  workflow.py
infrastructure/scripts/: deploy_agentcore.py  deploy_agentcore_toolkit.py
infrastructure/stacks/: oratio_stack.py
lambdas/agentcore_deployer/: handler.py
lambdas/agentcreator_invoker/: handler.py
lambdas/code_checker/: handler.py
lambdas/kb_provisioner/: handler.py
scripts/: invalidate_cloudfront.sh
